--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/css/styles.css
@@ -12229,6 +12229,24 @@ body {
   width: 100%;
 }
 
+.ver-todos-container .swiper-button-prev,
+.ver-todos-container .swiper-button-next {
+  position: static;
+  transform: none;
+  width: 44px;
+  height: 44px;
+  color: #FF7A00 !important;
+  left: auto;
+  right: auto;
+}
+
+@media (max-width: 767px) {
+  .ver-todos-container .swiper-button-prev,
+  .ver-todos-container .swiper-button-next {
+    display: none;
+  }
+}
+
 .ver-todos-link {
   display: inline-block;
   color: #FF7A00 !important;
